<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="14dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/img_l"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="2dp"
                android:background="@drawable/img_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="3dp"
                        android:contentDescription="@string/images"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_l"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/food_name"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingTop="6dp"
                    android:text="@string/price"
                    android:textColor="#0CA612"
                    android:textSize="15sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/quantity"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintBottom_toBottomOf="@+id/add"
                        app:layout_constraintEnd_toStartOf="@+id/add"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/subtract"
                        app:layout_constraintTop_toTopOf="@+id/add" />

                    <Button
                        android:id="@+id/subtract"
                        android:layout_width="58dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:background="@drawable/bg2"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/qty"
                        app:layout_constraintEnd_toStartOf="@+id/qty"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/qty" />

                    <Button
                        android:id="@+id/add"
                        android:layout_width="58dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg"
                        android:text="@string/add"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/qty"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>






</LinearLayout>